landing-page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: synthetic-enterprise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        - name: landing-page-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-config
        configMap:
          name: landing-page-config
      - name: landing-page-content
        emptyDir: {}
