openclaw-dev-working.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"openclaw","namespace":"openclaw"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"openclaw"}},"template":{"metadata":{"labels":{"app":"openclaw"}},"spec":{"containers":[{"env":[{"name":"OPENCLAW_GATEWAY_MODE","value":"local"},{"name":"OPENCLAW_GATEWAY_PORT","value":"3000"},{"name":"OPENCLAW_GATEWAY_BIND","value":"lan"},{"name":"OPENCLAW_GATEWAY_TOKEN","value":"dev-token-12345"}],"image":"ghcr.io/opencla [...]
  creationTimestamp: "2026-05-20T04:27:57Z"
  generation: 1
  name: openclaw
  namespace: openclaw
  resourceVersion: "611593"
  uid: 7dc2556d-3bbd-478d-b9a9-753b55a6a103
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: openclaw
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: openclaw
    spec:
      containers:
      - env:
        - name: OPENCLAW_GATEWAY_MODE
          value: local
        - name: OPENCLAW_GATEWAY_PORT
          value: "3000"
        - name: OPENCLAW_GATEWAY_BIND
          value: lan
        - name: OPENCLAW_GATEWAY_TOKEN
          value: dev-token-12345
        image: ghcr.io/openclaw/openclaw:latest
        imagePullPolicy: IfNotPresent
        name: openclaw
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/node/.openclaw/openclaw.json
          name: config
          subPath: openclaw.json
        - mountPath: /home/node/.openclaw
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: openclaw-config
        name: config
      - emptyDir: {}
        name: data
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-20T04:27:57Z"
    lastUpdateTime: "2026-05-20T04:27:57Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-05-20T04:27:57Z"
    lastUpdateTime: "2026-05-20T04:27:57Z"
    message: ReplicaSet "openclaw-58679f4bd5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
